<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download2"
    android:gravity="top"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LOGIN"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/login"/>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">




        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:startIconTint="@color/black"

            android:drawableStart="@drawable/ic_person"
            android:autofillHints=""
            android:hint="@string/Username"
            android:textStyle="bold"
            android:inputType="text"
            android:paddingStart="12dp"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:startIconTint="@color/black"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/black"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:textStyle="bold"
                android:inputType="numberPassword"
                android:paddingStart="12dp"
                android:textColor="@color/black"
                 />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/fpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="forgot password?"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />




        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/edit_text_curved_white"
            android:text="@string/LOGIN"
            android:textColor="@color/black"
            android:textSize="17sp" />


        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_text_curved_white"
            android:text="REGISTER"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>